ghc-4335c07/testsuite/tests/annotations/should_fail/Annfail05_Help.hs
module Annfail05_Help where

data NoInstances = NoInstances